Fix overlapping text

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,7 @@ body {
   padding: 0;
   min-height: 100vh;
   width: 100vw;
-  background-image: linear-gradient(60deg, #3778c2, rgb(32, 32, 186));
+  background-image: linear-gradient(60deg, #3778c2, rgb(15, 15, 203));
   background-repeat: no-repeat;
   background-size: cover;
 }
