--- a/app/assets/stylesheets/categories.css
+++ b/app/assets/stylesheets/categories.css
@@ -71,13 +71,15 @@ h1 {
   width: 100%;
   text-decoration: none;
   text-align: center;
+  display: flex;
+  justify-content: space-around;
 }
 
 .new-category,
 .btn,
 .a-box > a {
   color: white;
-  padding: 1vw 40vw;
+  padding: 1vw 0;
   border: groove 1.5px white;
   border-radius: 3px;
   background-color: #5fb523;
@@ -85,7 +87,8 @@ h1 {
   font-size: 3vw;
   text-decoration: none;
   text-align: center;
-  width: 100vw;
+  white-space: nowrap;
+  width: 95%;
   font-family: 'Lato', sans-serif;
 }
 
@@ -126,10 +129,6 @@ h1 {
   padding: 1.5vw;
   margin: 3vw 5vw;
   cursor: pointer;
-}
-
-#new-trans {
-  padding: 1vw 38vw;
 }
 
 .transaction {
