--- a/app/assets/stylesheets/splash.css
+++ b/app/assets/stylesheets/splash.css
@@ -1,3 +1,4 @@
+@media only screen and (min-width: 600px) {
 .splash-title {
   font-family: 'Montserrat', sans-serif;
   color: white;
@@ -59,4 +60,5 @@ h1 {
   width: initial;
   text-align: center;
   cursor: pointer;
+}
 }
